--- a/2020.md
+++ b/2020.md
@@ -7,3 +7,127 @@
 
 ## 扫码关注数学模型
 ![](https://avatars3.githubusercontent.com/u/56642120?s=200&v=4)
+
+
+## A 题 Moving North
+
+- 2001334:
+Southwest Jiaotong University, China
+
+- 2002354:
+University of International Business and Economics, China
+
+- 2003298:
+Beijing Institute of Technology, China
+
+- 2003485:
+Northeast Electric Power University, China
+
+- 2004833:
+Tiangong University, China
+
+- 2007799:
+Harbin Institute of Technology, China
+
+- 2017785:
+NC School of Science and Mathematics, NC, USA
+
+- 2018167:
+University of Electronic Science and Technology of China, China
+
+## B 题 The Longest Lasting Sandcastle(s)
+
+- 2007698:
+Wuhan University, China
+
+- 2010821:
+North University of China, China
+
+- 2011873:
+Northwestern Polytechnical University, China
+
+- 2013836:
+Xi'an Jiaotong University, China
+
+- 2019696:
+Beijing Normal University, China
+
+## C 题 A Wealth of Data
+
+- 2002116:
+Shanghai Jiao Tong University, China
+
+- 2003717:
+Shanghai Jiao Tong University, China
+
+- 2004647:
+South China University of Technology, China
+
+- 2007707:
+Shenzhen University, China
+
+- 2009116:
+Dongbei University of Finance and Economics, China
+
+- 2010638:
+Southwestern University of Finance and Economics, China
+
+## D 题 Teaming Strategies
+
+- 2002526:
+University of International Business and Economics, China
+
+- 2003723:
+Dongbei University of Finance and Economics, China
+
+- 2006782:
+Xidian University, China
+
+- 2013140:
+Xi'an Jiaotong University, China
+
+- 2013245:
+Capital University of Economics and Business, China
+
+- 2015044:
+New York University, NY, USA
+
+- 2022868:
+The College of William & Mary, VA, USA
+
+## E 题 The Place I Called Home
+
+- 2005623:
+Beijing Normal University, China
+
+- 2006291: The Place I Called Home..  
+South China University of Technology, China
+
+- 2009139:
+Xi'an Jiaotong University, China
+
+- 2013233:
+Beijing Forestry University, China
+
+- 2013733:
+Shanghai University of Finance and Economics, China
+
+- 2013772:
+Xi'an Jiaotong University, China
+
+## F 题 Drowning in Plastic
+
+- 2008521:
+Nanjing University of Posts & Telecommunications, China
+
+- 2010035:
+Shanghai Jiao Tong University, China
+
+- 2016287:
+University of Electronic Science and Technology of China, China
+
+- 2017963:
+Donghua University, China
+
+- 2021103:
+Brown University, RI, USA
